samples/_failures_safe/1761453899_4b2620_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b64d8e12.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_b64d8e12.c:135:5: error: expected expression at end of input
  135 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_b64d8e12.c:135:5: error: expected declaration or statement at end of input
